# cosuno-training

./: BASIC_VS_ENHANCED_COMPARISON.md  LANGCHAIN_TOOLS_ARCHITECTURE_PATTERNS.md  LANGCHAIN_TOOLS_CODE_EXAMPLES.md  LANGCHAIN_TOOLS_IMPLEMENTATION_GUIDE.md  LANGCHAIN_TOOLS_QUICK_REFERENCE.md  LANGCHAIN_TOOLS_RESEARCH_INDEX.md  LANGCHAIN_TOOLS_RESEARCH_SUMMARY.md  QUICK_REFERENCE.md  README.md  TOOL_DOCUMENTATION_INDEX.md  TOOL_IMPLEMENTATION_CHECKLIST.md  pyproject.toml  run_enhanced_demo.py  run_live_agent.py  run_live_demo.py  test_gemini_api.py
.github/workflows/: tool-tests.yml
docs/: ADDING_CUSTOM_TOOLS.md  ADVANCED_LANGGRAPH_FEATURES.md  COSUNO_USECASE.md  LANGGRAPH_STATE_RETURN_PATTERNS.md  TOOL_QUICK_REFERENCE.md  USAGE.md
old/: COMPLETION_SUMMARY.md  ENHANCED_AGENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TODO.md  TOOL_IMPLEMENTATION_SUMMARY.md  TOOL_SYSTEM_OVERVIEW.txt  list_models.py  pyproject.toml  run_tool_demo.py  test_api_key.py
old/docs/: LANGGRAPH_PATTERNS.md  TOOL_ARCHITECTURE_DIAGRAMS.md  TOOL_USAGE_GUIDE.md
old/src/construction_assistant/: __init__.py  agent.py  schema.py  tool_cache.py  tools.py
src/: run.py
src/agents/agent_001/: graph.py  nodes.py  state.py
src/agents/agent_002/: graph.py  nodes.py  states.py
src/agents/agent_003/: graph.py  nodes.py  states.py  tools.py
src/construction_assistant/: __init__.py  enhanced_langgraph_agent.py  langgraph_agent.py  parallel_executor.py  schema.py
src/construction_assistant/tests/: test_langgraph_agent.py  test_llm_with_tools.py  test_tool_cache.py
(+4 files in other folders)
